Multiple Fixes
Added images, links, Edited some attributes for the css file.

Future: need to make it so that the mountains don't cover the link icons.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,8 @@
 	Aerial by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
+	Modified by Abhishek Mallemadugula
 */
 
 /* Reset */
@@ -188,7 +190,7 @@
 
 		background: #348cb2 url("images/bg.jpg") bottom left;
 		background-repeat: repeat-x;
-		height: 100%;
+		height: 110%;
 		left: 0;
 		opacity: 1;
 		position: fixed;
@@ -307,10 +309,10 @@
 	}
 
 	#overlay {
-		-moz-animation: overlay 1.5s 1.5s forwards;
-		-webkit-animation: overlay 1.5s 1.5s forwards;
-		-ms-animation: overlay 1.5s 1.5s forwards;
-		animation: overlay 1.5s 1.5s forwards;
+		-moz-animation: overlay .5s .5s forwards;
+		-webkit-animation: overlay .5s .5s forwards;
+		-ms-animation: overlay .5s .5s forwards;
+		animation: overlay .5s .5s forwards;
 		background-attachment: fixed, fixed;
 		background-image: url("images/overlay-pattern.png"), url("images/overlay.svg");
 		background-position: top left, center center;
@@ -508,10 +510,16 @@
 		opacity: 0;
 		position: relative;
 		text-align: center;
-		top: -1em;
-		vertical-align: middle;
+		top: 50px;
+		vertical-align: top;
 		width: 90%;
 	}
+
+		#header img{
+			width:256px;
+			height:256px;
+			border-radius: 30%;
+		}
 
 		#header h1 {
 			font-size: 4.35em;
@@ -527,7 +535,7 @@
 		}
 
 		#header nav {
-			margin: 1.5em 0 0 0;
+			margin: .5em 0 0 0;
 		}
 
 			#header nav li {
